# Crew_ai_financial_chatbot

./: .env  .env.example  .replit  README.md  financial_market_crew.py  main.py  pyproject.toml  replit.md  requirements.txt
agents/: formatting_agent.py  search_agent.py  send_agent.py  summary_agent.py  translating_agent.py
attached_assets/: Pasted-You-are-an-expert-CrewAI-Developer-and-Python-Backend-Engineer-Your-task-is-to-create-a-complete-Py-1756815502539_1756815502540.txt
output/: .gitkeep
utils/: logger.py  pdf_generator.py
